<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/expense_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_para"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textMultiLine"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fellow_developers"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_para" />

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutSatyavathi"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:padding="15dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/aboutAjay"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/Satya_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="80dp"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/satya_image"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/satya_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="114dp"
                    android:text="@string/satya"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Satya_card"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/satya_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/satya_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Satya_card"
                    app:layout_constraintTop_toBottomOf="@+id/satya_name" />

                <TextView
                    android:id="@+id/satya_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="201dp"
                    android:layout_marginBottom="22dp"
                    android:text="@string/android_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Satya_card"
                    app:layout_constraintTop_toBottomOf="@+id/satya_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutAnkur"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@+id/aboutVatsal"
            app:layout_constraintStart_toStartOf="@+id/aboutVatsal"
            app:layout_constraintTop_toBottomOf="@+id/aboutVatsal" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/ankur_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="80dp"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ankur_image"
                        tools:src="@drawable/ankur_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/ankur_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/ankur"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/ankur_card"
                    app:layout_constraintTop_toTopOf="@+id/ankur_card" />

                <TextView
                    android:id="@+id/ankur_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/ankur_mail"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/ankur_name"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ankur_name"
                    app:layout_constraintTop_toBottomOf="@+id/ankur_name" />

                <TextView
                    android:id="@+id/ankur_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="233dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/ui_design"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ankur_card"
                    app:layout_constraintTop_toBottomOf="@+id/ankur_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/aboutVatsal"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@+id/aboutSatyavathi"
            app:layout_constraintStart_toStartOf="@+id/aboutSatyavathi"
            app:layout_constraintTop_toBottomOf="@+id/aboutSatyavathi">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/vatsal_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="80dp"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/vatsal_image"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/vatsal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="188dp"
                    android:text="@string/vatsal"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vatsal_card"
                    app:layout_constraintTop_toTopOf="@+id/vatsal_card" />

                <TextView
                    android:id="@+id/vatsal_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/vatsal_mail"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/vatsal_name"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/vatsal_name"
                    app:layout_constraintTop_toBottomOf="@+id/vatsal_name" />

                <TextView
                    android:id="@+id/vatsal_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="233dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/ui_design"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vatsal_card"
                    app:layout_constraintTop_toBottomOf="@+id/vatsal_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutAjay"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/Ajay_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ajay_image"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/ajay_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="217dp"
                    android:text="@string/ajay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Ajay_card"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ajay_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="85dp"
                    android:text="@string/ajay_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Ajay_card"
                    app:layout_constraintTop_toBottomOf="@+id/ajay_name" />

                <TextView
                    android:id="@+id/ajay_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="203dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/android_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Ajay_card"
                    app:layout_constraintTop_toBottomOf="@+id/ajay_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>